// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button theme renders danger button when specified with skin prop 1`] = `
.c0 {
  box-sizing: border-box;
  height: 30px;
  width: 285px;
  border-radius: 3px;
  font-family: Lato;
  font-size: 14px;
  line-height: 17px;
  text-align: center;
  margin-bottom: 1rem;
  cursor: pointer;
}

.c1 {
  background-color: #d56969;
  color: #fff;
}

@media (min-width:801px) {
  .c0 {
    height: 30px;
    width: 151px;
    margin: 1rem;
  }
}

<div>
  <button
    class="c0 c1"
  >
    danger button
  </button>
</div>
`;

exports[`Button theme renders primary button by default 1`] = `
.c0 {
  box-sizing: border-box;
  height: 30px;
  width: 285px;
  border-radius: 3px;
  font-family: Lato;
  font-size: 14px;
  line-height: 17px;
  text-align: center;
  margin-bottom: 1rem;
  cursor: pointer;
}

.c1 {
  background-color: #69d5b1;
  color: #fff;
}

@media (min-width:801px) {
  .c0 {
    height: 30px;
    width: 151px;
    margin: 1rem;
  }
}

<button
  class="c0 c1"
>
  primary button
</button>
`;

exports[`Button theme renders secondary button when specified with skin prop 1`] = `
.c0 {
  box-sizing: border-box;
  height: 30px;
  width: 285px;
  border-radius: 3px;
  font-family: Lato;
  font-size: 14px;
  line-height: 17px;
  text-align: center;
  margin-bottom: 1rem;
  cursor: pointer;
}

.c1 {
  background-color: #fff;
  border: 2px solid;
  color: #69d5b1;
}

@media (min-width:801px) {
  .c0 {
    height: 30px;
    width: 151px;
    margin: 1rem;
  }
}

<div>
  <button
    class="c0 c1"
  >
    secondary button
  </button>
</div>
`;
